# modugant

./: .gitignore  README.md  TODO.md  pyproject.toml
.devcontainer/: devcontainer.json
demo/: connectors.ipynb  discriminators.ipynb  generators.ipynb  matrix.ipynb  trainer.ipynb
modugant/: __init__.py  device.py  protocols.py  trainer.py
modugant/conditioners/: __init__.py  block.py  category.py  joint.py  none.py  pooled.py
modugant/connectors/: __init__.py  composed.py  direct.py  joint.py
modugant/discriminators/: __init__.py  basic.py  extended.py  folded.py  penalized.py  pooled.py  protocol.py  sphere.py  standard.py
modugant/generators/: __init__.py  base.py  permuter.py  pooled.py  protocol.py  residual.py  sequential.py
modugant/interceptors/: __init__.py  direct.py  joint.py  pooled.py  softmax.py  subset.py
modugant/layers/: abstract.py  interactive.py  protocol.py  sphere.py  subset.py
modugant/layers/isometric/: dropout.py  isometric.py  norm.py  relu.py  sigmoid.py
modugant/layers/linear/: linear.py  softmax.py  sphere.py
modugant/loaders/: __init__.py  category.py  composed.py  direct.py  joint.py  onehot.py  pooled.py  positional.py  protocol.py  reffect.py  standardize.py
modugant/loaders/connectors/: __init__.py  categorical.py  composed.py  direct.py  joint.py  positional.py  protocol.py  reffect.py  standardize.py
modugant/loaders/connectors/interceptors/: __init__.py  composed.py  identity.py  joint.py  protocol.py  softmax.py
modugant/loaders/samplers/: iterating.py  protocol.py  uniform.py
modugant/matrix/: __init__.py  dim.py  index.py  matrix.py  ops.py
modugant/penalizers/: __init__.py  entropy.py  joint.py  pooled.py  static.py
modugant/regimens/: __init__.py  basic.py  protocol.py
modugant/samplers/: __init__.py  iterating.py  loading.py  random.py
modugant/transformers/: __init__.py  category.py  composed.py  joint.py  standardize.py
modugant/updaters/: __init__.py  entropy.py  joint.py  pooled.py  static.py
(+14 files in other folders)
